# SnakeRaven-Project

./: LICENSE  README.md
raven_2/: CMakeLists.txt
raven_2/include/: DS0.h
raven_2/include/raven/: local_io.h  struct.h  trajectory.h
raven_2/msg/: raven_jointmove.msg
raven_2/src/raven/: local_io.cpp  rt_process_preempt.cpp
raven_qut_training_docs_2018/: Applied_Dexterity_Contact_and_Links.docx  RAVEN Instructions.docx  raven_II_dynamics.docx  raven_stuff.pptx  welcome.docx
snake_raven_controller/: CMakeLists.txt  README.md  SnakeRaven_HandEye1  package.xml
snake_raven_controller/msg/: snakeraven_state.msg
snake_raven_controller/src/: Calibratedmotions_process.cpp  Console_process.cpp  HandEye_calibrator.cpp  HandEye_calibrator.h  HandEye_process.cpp  IBVS_teleop_process.cpp  Keyboard_interactions.cpp  KinematicsMaths.cpp  KinematicsMaths.h  Menu_screens.cpp  Raven_Controller.cpp  Raven_Controller.h  Raven_motion.cpp  SnakeRaven.cpp  SnakeRaven.h  Teleop_process.cpp  Waypoint_Task_process.cpp  listener.cpp  talker.cpp
snake_raven_controller/src/raven_2/: raven_state.2.h
snake_raven_controller/src/raven_2/Modified_files_in_raven_2/: defines.h  local_io.cpp  rt_raven.cpp  trajectory.cpp
vision_system_snakeraven/: CMakeLists.txt  package.xml
vision_system_snakeraven/src/: Feature_tracker.cpp  Feature_tracker.h  IBVS_orientation_control.cpp  IBVS_orientation_control.h  aruco_tracker.cpp  aruco_tracker.h  image_converter.cpp  vpc.cpp  vpc.h
