<?xml version="1.0"?>
<package>
  <name>snake_raven_controller</name>
  <version>0.1.0</version>
  <description>The snake_raven_controller package</description>

  <maintainer email="andrew_razjigaev@outlook.com">Andrew Raz</maintainer>
  <license>BSD</license>
  <author email="andrew_razjigaev@outlook.com">Andrew Raz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
